--- a/WebSite 1/style.css
+++ b/WebSite 1/style.css
@@ -78,23 +78,34 @@
 
 .zoom {
     padding: 50px;
-    border: 2px solid blue;
+    border: 5px solid rgb(0, 0, 0);
     border-radius: 18px;
-    background-color: rgb(0, 108, 197);
+    background-color: rgb(21, 166, 59);
     transition: transform .2s; /* Animation */
     width: 465px;
-    height: 165px;
+    height: 185px;
     margin:  auto;
+    cursor: pointer;
 }
   
   .zoom:hover {
-    transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }
+
+  .zoom h1{
+    align-items: center;
+    text-align: center;
+    text-emphasis-color: black;
+    color: black;
+    font-style: oblique;
+    font-size: 2.5rem;
   }
 
 
   /* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-box {
     background-color: transparent;
+    background: url('d1.jpg');
     width: 260px;
     height: 200px;
     border: 1px solid #f1f1f1;
