--- a/WebSite 1/style.css
+++ b/WebSite 1/style.css
@@ -38,6 +38,7 @@
       margin: auto;
       align-items: center;
       justify-content: center;
+      padding: 21px 40px;
       /* border: 2px solid black; */
     }
     
@@ -55,15 +56,7 @@
 /* ZOOM */
 
 
-.container{
-    /* height: 255px; */
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* border: 2px solid red; */
-    /* width: 100%; */
-    /* max-width: none; */
-}
+
 
 .container-inside{
     display: flex;
@@ -219,3 +212,26 @@
       width: 100%;
     }
   }
+
+
+
+  #products{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* margin: 20px; */
+  }
+
+  .boxx{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card{
+    margin: 20px 20px;
+    width: 100px;
+
+  }
+
